src/main/java/com/example/rejectionapp/Main.java
package com.example.rejectionapp;

public class Main {
    public static void main(String[] args) {
        HelloApplication.main(args);
    }
}
